Table clients {
  id UUID [pk, increment]
  name varchar
  email varchar
  phone varchar
  created_at datetime
}

Table products {
  id UUID [pk, increment]
  name varchar
  description varchar
}

Table warehouses {
  id UUID [pk, increment]
  name varchar
  address varchar
  city varchar
  country varchar
}

Table ports {
  id UUID [pk, increment]
  name varchar
  address varchar
  city varchar
  country varchar
}

Table land_shipments {
  id UUID [pk, increment]
  client_id UUID [ref: > clients.id]
  product_id UUID [ref: > products.id]
  quantity int
  registration_date date
  delivery_date date
  warehouse_id UUID [ref: > warehouses.id]
  shipping_cost decimal
  discounted_cost decimal
  vehicle_plate varchar(6)
  guide_number varchar(10) [unique]
}

Table maritime_shipments {
  id UUID [pk, increment]
  client_id UUID [ref: > clients.id]
  product_id UUID [ref: > products.id]
  quantity int
  registration_date date
  delivery_date date
  port_id UUID [ref: > ports.id]
  shipping_cost decimal
  discounted_cost decimal
  fleet_number varchar(8)
  guide_number varchar(10) [unique]
}